--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,24 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+h1 {
+  color: green;
+  font-style: italic;
+}
+
+
+.note{
+  color: grey;
+  padding-top: 5px;
+  font-size: 15px;
+}
+.error {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
